responsive layout: fix dropdown nav menu overlapping main content.
The culprit is `float: right;` but none of this other stuff is needed.

--- a/app/assets/stylesheets/common/responsive.scss
+++ b/app/assets/stylesheets/common/responsive.scss
@@ -129,14 +129,6 @@
     }
   }
 
-  nav {
-    background: none;
-    float: right;
-    font-size: 1.125em;
-    width: 100%;
-    margin-bottom: 1em;
-  }
-  
   #nav {
     display: none;
   }
